--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lucide-react": "^0.503.0",
+    "react-confetti": "^6.4.0", 
+    "sonner": "^2.0.3",
     "@monaco-editor/react": "^4.7.0",
     "@tailwindcss/vite": "^4.0.14",
     "axios": "^1.8.4",
