--- a/frontend/render.yaml
+++ b/frontend/render.yaml
@@ -2,8 +2,8 @@ services:
   - type: web
     name: e-learning-dsp
     env: static
-    buildCommand: npm install && npm run build
-    staticPublishPath: ./dist
+    buildCommand: cd "E-Learning DSP/frontend" && npm install && npm run build
+    staticPublishPath: ./E-Learning DSP/frontend/dist
     routes:
       - type: rewrite
         source: /*
