--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "lucide-react": "^0.503.0",
-    "react-confetti": "^6.4.0",
-    "sonner": "^2.0.3",
     "@monaco-editor/react": "^4.7.0",
     "@tailwindcss/vite": "^4.0.14",
     "axios": "^1.8.4",
@@ -22,9 +19,11 @@
     "echarts-for-react": "^3.0.2",
     "framer-motion": "^12.6.3",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.503.0",
     "prismjs": "^1.30.0",
     "pyodide": "^0.27.4",
     "react": "^19.0.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-monaco-editor": "^0.58.0",
@@ -33,6 +32,7 @@
     "react-router-dom": "^7.3.0",
     "react-simple-code-editor": "^0.14.1",
     "recharts": "^2.15.2",
+    "sonner": "^2.0.3",
     "styled-components": "^6.1.16",
     "swiper": "^11.2.6",
     "tailwindcss": "^4.0.14",
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/prismjs": "^1.26.5",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
