--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^12.6.3",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.503.0",
+    "monaco-editor": "^0.52.2",
     "prismjs": "^1.30.0",
     "pyodide": "^0.27.4",
     "react": "^19.0.0",
@@ -40,6 +41,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/node": "^24.0.10",
     "@types/prismjs": "^1.26.5",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
@@ -50,6 +52,7 @@
     "globals": "^15.15.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "vite-plugin-monaco-editor": "^1.1.0"
   }
 }
