Created workflow that automatically runs prettier on the project.

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,8 +1,27 @@
-name: workflow.yml
+name: run prettier
 on:
-  workflow_dispatch:
+  push
 
 jobs:
-  print:
+  format-code:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      # Set up git for the current pull request/branch that is being changed. Needed to push back onto the pull request later.
+      - name: checkout project
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.head_ref }}
+      # TODO: add caching for npm packages
+      - name: setup node
+        run: |
+          cd frontend
+          npm install
+      - name: run prettier
+        run: |
+          prettier . --write
+
+      - name: push to pull request
+        uses: stefanzweifel/git-auto-commit-action@v6
 
