--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.503.0",
     "monaco-editor": "^0.52.2",
+    "prettier": "^3.6.2",
     "prismjs": "^1.30.0",
     "pyodide": "^0.27.4",
     "react": "^19.0.0",
