--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -20,8 +20,7 @@ jobs:
           npm install
       - name: run prettier
         run: |
-          cd frontend
-          prettier . --write
+          npm run format
 
       - name: push to pull request
         uses: stefanzweifel/git-auto-commit-action@v6
