--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -20,6 +20,7 @@ jobs:
           npm install
       - name: run prettier
         run: |
+          cd frontend
           npm run format
 
       - name: push to pull request
