--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,14 @@
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
     "@tailwindcss/vite": "^4.0.14",
+    "@tanstack/react-query": "^5.84.2",
     "axios": "^1.8.4",
     "babel-plugin-macros": "^3.1.0",
     "clsx": "^2.1.1",
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
     "framer-motion": "^12.6.3",
+    "hls.js": "^1.6.9",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.503.0",
     "monaco-editor": "^0.52.2",
