--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "dependencies": {
+    "@stripe/stripe-js": "^7.8.0",
     "lucide-react": "^0.503.0",
     "react-confetti": "^6.4.0",
     "sonner": "^2.0.3"
+  },
+  "devDependencies": {
+    "@types/stripe-v3": "^3.1.33"
   }
 }
