--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -13,11 +13,11 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: ${{ github.head_ref }}
-      # TODO: add caching for npm packages
-      - name: setup node
-        run: |
-          cd frontend
-          npm install
+      - uses: actions/setup-node@v4
+        with:
+          node-version: lts/*
+          cache: 'npm'
+          cache-dependency-path: frontend/package-lock.json
       - name: run prettier
         run: |
           cd frontend
