--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -18,6 +18,9 @@ jobs:
           node-version: lts/*
           cache: 'npm'
           cache-dependency-path: frontend/package-lock.json
+      - run: |
+          cd frontend
+          npm ci
       - name: run prettier
         run: |
           cd frontend
