chore(test): update vitest setup path and include tests folder in tsconfig

--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -36,5 +36,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src", "vite-env.d.ts"]
+  "include": ["src", "tests", "vite-env.d.ts"]
 }
