--- a/.github/workflows/runtests.yml
+++ b/.github/workflows/runtests.yml
@@ -1,9 +1,11 @@
 name: unit tests
 on:
-  push
+  pull_request:
+    branches:
+      - 'develop'
 
 jobs:
-  format-code:
+  run-vitests:
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -12,6 +14,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: ${{ github.head_ref }}
+          fetch-depth: 0
       - name: merge develop
         run: |
            git fetch origin
