--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.3.0",
     "react-simple-code-editor": "^0.14.1",
+    "react-stripe-js": "^1.1.5",
     "recharts": "^2.15.2",
     "sonner": "^2.0.3",
     "styled-components": "^6.1.16",
