--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
+    "@stripe/react-stripe-js": "^4.0.2",
     "@tailwindcss/vite": "^4.0.14",
     "@tanstack/react-query": "^5.85.5",
     "axios": "^1.8.4",
@@ -41,7 +42,6 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.3.0",
     "react-simple-code-editor": "^0.14.1",
-    "react-stripe-js": "^1.1.5",
     "recharts": "^2.15.2",
     "sonner": "^2.0.3",
     "styled-components": "^6.1.16",
